CSM working with biobank2

--- a/caCORE_SDK/sdk/conf/deploy.properties
+++ b/caCORE_SDK/sdk/conf/deploy.properties
@@ -30,8 +30,8 @@
 PROJECT_NAME=biobank2
 NAMESPACE_PREFIX=gme://caCORE.caCORE/3.2/
 
-SECURITY_ENABLED=false
-CSM_PROJECT_NAME=sdk
+SECURITY_ENABLED=true
+CSM_PROJECT_NAME=biobank2
 INSTANCE_LEVEL_SECURITY=false
 ATTRIBUTE_LEVEL_SECURITY=false
 
@@ -99,9 +99,9 @@ DB_DIALECT=org.hibernate.dialect.MySQLDialect
 #  present in the same schema as the domain object resides
 ##################################################################################
 CSM_USE_JNDI_BASED_CONNECTION=no
-CSM_DB_JNDI_URL=java:/SDK
+CSM_DB_JNDI_URL=java:/csmupt
 
-CSM_DB_CONNECTION_URL=jdbc:mysql://localhost:8081/bibank2
+CSM_DB_CONNECTION_URL=jdbc:mysql://localhost:8081/csmupt
 CSM_DB_USERNAME=dummy
 CSM_DB_PASSWORD=ozzy498
 CSM_DB_DRIVER=com.mysql.jdbc.Driver
