trying to add objects to ORM

--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -3,6 +3,21 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                icons/,\
-               .
-jars.compile.order = edu/ualberta/med/biobank
+               .,\
+               lib/sdk-writeable-client.framework.jarconf/,\
+               conf/,\
+               lib/axis.jar,\
+               lib/caGrid-CQL-cql.1.0-1.2.jar,\
+               lib/cog-jglobus.jar,\
+               lib/commons-discovery-0.2.jar,\
+               lib/jaxrpc.jar,\
+               lib/sdk-grid-remoting.jar,\
+               lib/sdk-security.jar,\
+               lib/sdk-writable-core.jar
+jars.compile.order = conf/,\
+                     lib/sdk-writeable-client.framework.jarconf/,\
+                     .
+source.lib/sdk-writeable-client.framework.jarconf/ = src/
+source.conf/ = src/
+output.conf/ = bin/
 
