--- a/sdk_conf/deploy.properties
+++ b/sdk_conf/deploy.properties
@@ -95,7 +95,7 @@ CACHE_PROTECTION_ELEMENTS=false
 ##################################################################################
 ENABLE_WRITABLE_API_EXTENSION=true
 DATABASE_TYPE=mysql
-IDENTITY_GENERATOR_TAG=<generator class="assigned"/>
+IDENTITY_GENERATOR_TAG=<generator class="increment"/>
 CADSR_CONNECTION_URL=http://cadsrapi.nci.nih.gov/cadsrapi40
 ENABLE_COMMON_LOGGING_MODULE=true
 CLM_PROJECT_NAME=${PROJECT_NAME}
