--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -159,4 +159,17 @@
             name="Site View">
       </editor>
    </extension>
+   <extension
+         point="org.eclipse.ui.bindings">
+      <scheme
+            id="org.eclipse.ui.examples.contributions.scheme"
+            name="%scheme.info.name">
+      </scheme>
+      <key
+            commandId="org.eclipse.ui.file.save"
+            contextId="org.eclipse.ui.contexts.window"
+            schemeId="org.eclipse.ui.examples.contributions.scheme"
+            sequence="CTRL+S">
+      </key>
+   </extension>
 </plugin>
