--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -20,4 +20,5 @@ jars.compile.order = conf/,\
 source.lib/sdk-writeable-client.framework.jarconf/ = src/
 source.conf/ = src/
 output.conf/ = bin/
+source.lib/sdk-writable-core.jar = src/
 
