--- a/eclipse_ws/biobank2/conf/log4j.properties
+++ b/eclipse_ws/biobank2/conf/log4j.properties
@@ -1,12 +1,14 @@
-log4j.rootLogger=ERROR,stdout
-
+log4j.rootLogger=ERROR,R
+log4j.category.edu.ualberta.med.biobank=DEBUG,stdout
 
 ### direct messages to file hibernate.log ###
 
-log4j.appender.clientLog=org.apache.log4j.FileAppender
-log4j.appender.clientLog.File=./log/client.log
-log4j.appender.clientLog.layout=org.apache.log4j.PatternLayout
-log4j.appender.clientLog.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
+log4j.appender.R=org.apache.log4j.RollingFileAppender
+log4j.appender.R.File=./log/biobank.log
+log4j.appender.R.MaxFileSize=100KB
+log4j.appender.R.MaxBackupIndex=1
+log4j.appender.R.layout=org.apache.log4j.PatternLayout
+log4j.appender.R.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -20,6 +22,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 #log4j.rootLogger=warn, stdout
 #log4j.rootLogger=warn, file
 #log4j.logger.org.hibernate=info
+
 
 ### log just the SQL
 #log4j.logger.org.hibernate.SQL=debug
