--- a/eclipse_ws/biobank2/conf/log4j.properties
+++ b/eclipse_ws/biobank2/conf/log4j.properties
@@ -1,5 +1,6 @@
 log4j.rootLogger=ERROR,R
 log4j.category.edu.ualberta.med.biobank=DEBUG,stdout
+#log4j.category.edu.ualberta.med.biobank.widgets.MultiSelect=TRACE,stdout
 
 ### direct messages to file hibernate.log ###
 
