--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,6 @@ data_model/biobank2.uml~
 eclipse_ws/.metadata/
 eclipse_ws/biobank2/.settings/
 eclipse_ws/biobank2/bin/
+eclipse_ws/biobank2/log/
 runtime-biobank2.biobank2/
 schema/schema-export.sql
