--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -4,21 +4,14 @@ bin.includes = plugin.xml,\
                META-INF/,\
                icons/,\
                .,\
-               lib/sdk-writeable-client.framework.jarconf/,\
                conf/,\
-               lib/axis.jar,\
-               lib/caGrid-CQL-cql.1.0-1.2.jar,\
-               lib/cog-jglobus.jar,\
-               lib/commons-discovery-0.2.jar,\
-               lib/jaxrpc.jar,\
-               lib/sdk-grid-remoting.jar,\
-               lib/sdk-security.jar,\
-               lib/sdk-writable-core.jar
+               lib/
 jars.compile.order = conf/,\
                      lib/sdk-writeable-client.framework.jarconf/,\
                      .
 source.lib/sdk-writeable-client.framework.jarconf/ = src/
-source.conf/ = src/
+source.conf/ = src/,\
+               lib/
 output.conf/ = bin/
 source.lib/sdk-writable-core.jar = src/
 
