--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -6,7 +6,9 @@ bin.includes = plugin.xml,\
                .,\
                conf/,\
                lib/,\
-               lib/commons-lang-2.4.jar
+               lib/commons-lang-2.4.jar,\
+               lib/sdk-writable-core.jar,\
+               lib/sdk-writeable-client.framework.jarconf/
 jars.compile.order = conf/,\
                      lib/sdk-writeable-client.framework.jarconf/,\
                      .
