now prevents a storage type or a patient with a name that is already in the database from being added

--- a/sdk_conf/deploy.properties
+++ b/sdk_conf/deploy.properties
@@ -179,7 +179,7 @@ SERVER_URL=http://localhost:8080/${PROJECT_NAME}
 #         as the '*' symbol is greedy, and would otherwise consume the entire fully
 #         qualified class name, causing the match to fail.
 ##################################################################################
-MODEL_FILE=../../../data_model/biobank2.uml
+MODEL_FILE=../../../model/biobank2.uml
 MODEL_FILE_TYPE=ARGO
 #MODEL_FILE=sdk.xmi
 #MODEL_FILE_TYPE=EA
