working on deleting objects

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@ CSM_API_rel_401.zip
 CSM_API_rel_401/
 CSM_UPT_4_0_Release.zip
 CSM_UPT_4_0_Release/
-data_model/*.png
-data_model/biobank2.uml~
+model/*.png
+model/biobank2.uml~
 eclipse_ws/.metadata/
 eclipse_ws/biobank2/.settings/
 eclipse_ws/biobank2/bin/
